force-app/main/default/objects/GP_Scoring_Error__c/GP_Scoring_Error__c.object-meta.xml
<CustomObject>
    <description>Logs failures from the ML lead scoring integration (cold and warm models). Records are created when a callout fails, a non-200 response is received, or a DML error occurs during score writeback.</description>
    <label>GP Scoring Error</label>
    <nameField>
        <displayFormat>GPERR-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GP Scoring Errors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>