force-app/main/default/objects/GP_Scoring_Error__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>